--- a/index.html
+++ b/index.html
@@ -16,15 +16,19 @@
             <p>2 more to do, 1 done</p>
         </div>
 <!-- list -->
-        <div>
-            <ul class="list-parent" id="list-parent">
-
-            </ul>
-        </div>
+    <div class="list-parent">
+        <!-- <div class="list-child">
+            <p class="list-txt">sholat</p>
+            <div>
+                <i class="fa fa-check list-dn" aria-hidden="true"></i>
+                <i class="fa fa-trash list-rm" aria-hidden="true"></i>
+            </div>
+        </div> -->
+    </div>
 <!-- form -->
             <form class="form" action="#">
                 <input class="input" type="text" id="input">
-                <button class="add-btn" onclick="addTask()">Add Task</button>
+                <button class="add-btn">Add Task</button>
             </form>
         </div>
 
