--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!-- happy hacking :) -->
     <div class="base">
         <div class="head">
-            <h1 class="title">My Todo List</h1>
+            <h1 class="title">My Task List</h1>
             <p>2 more to do, 1 done</p>
         </div>
 <!-- list -->
