--- a/index.html
+++ b/index.html
@@ -4,42 +4,76 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="./style/style.css">
+        <title>Task Assistent</title>
     </head>
     <body>
-<!-- happy hacking :) -->
-    <div class="base">
-        <div class="head">
-            <h1 class="title">My Task List</h1>
-            <p>2 more to do, 1 done</p>
-        </div>
-<!-- list -->
-    <div class="list-parent">
-        <!-- <div class="list-child">
-            <p class="list-txt">sholat</p>
-            <div>
-                <i class="fa fa-check list-dn" aria-hidden="true"></i>
-                <i class="fa fa-trash list-rm" aria-hidden="true"></i>
+    <div class="card-parent">
+<!-- task -->
+        <div class="task-parent">
+            <div class="task-title">taskList</div>
+            <div class="task-child">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Consectetur excepturi quaerat doloribus, adipisci molestiae
+                    illo!</p>
+                <a href="./page/todolist.html">getStarted</a>
             </div>
-        </div> -->
-    </div>
-<!-- form -->
-            <form class="form" action="#">
-                <input class="input" type="text" id="input">
-                <button class="add-btn">Add Task</button>
-            </form>
         </div>
 
+<!-- calculator -->
+        <div class="calculator-parent">
+            <div class="calculator-title">calculator</div>
+            <div class="calculator-child">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Consectetur excepturi quaerat doloribus, adipisci molestiae
+                    illo!</p>
+                <a href="./page/todolist.html">getStarted</a>
+            </div>
+        </div>
 
+<!-- invoiceGenerator -->
+        <div class="invoiceGenerator-parent">
+            <div class="invoiceGenerator-title">invoiceGenerator</div>
+            <div class="invoiceGenerator-child">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Consectetur excepturi quaerat doloribus, adipisci molestiae
+                    illo!</p>
+                <a href="./page/todolist.html">getStarted</a>
+            </div>
+        </div>
 
+<!-- notes -->
+        <div class="task-parent">
+            <div class="task-title">taskList</div>
+            <div class="task-child">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Consectetur excepturi quaerat doloribus, adipisci molestiae
+                    illo!</p>
+                <a href="./page/todolist.html">getStarted</a>
+            </div>
+        </div>
 
-<!-- script -->
-        <script
-            src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="script.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+<!-- kanban -->
+        <div class="task-parent">
+            <div class="task-title">taskList</div>
+            <div class="task-child">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Consectetur excepturi quaerat doloribus, adipisci molestiae
+                    illo!</p>
+                <a href="./page/todolist.html">getStarted</a>
+            </div>
+        </div>
+
+<!-- commingSoon -->
+        <div class="commingSoon-parent">
+            <div class="commingSoon-title">taskList</div>
+            <div class="commingSoon-child">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Consectetur excepturi quaerat doloribus, adipisci molestiae
+                    illo!</p>
+                <a href="./page/todolist.html">getStarted</a>
+            </div>
+        </div>
+    </div>
     </body>
 </html>
